# event-times

./: GETTING_STARTED.md  README.md  USAGE.md  demo.py  examples.py  py.typed  pyproject.toml
src/event_times/: __init__.py  cli.py  core.py  event.py  event.pyi  state.py
tests/: test_cli.py  test_event.py  test_onofftimes.py  test_properties.py  test_state.py
tests/data/: all_on.txt  all_on_extra_columns.txt  backwards.txt  basic_on_off.txt  case_insensitive.txt  comments_and_blanks.txt  extra_columns.txt  gap.txt
